--- a/src/app/album/album.page.html
+++ b/src/app/album/album.page.html
@@ -7,10 +7,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="data" [style.--custombg]="data.backgroundColor">
+<ion-content scrollEvents="true"  [fullscreen]="true" [appImageFade]="cover" *ngIf="data" [style.--custombg]="data.backgroundColor">
 
   <!-- Image of the album -->
-  <div class="ion-text-center image-box">
+  <div class="ion-text-center image-box" #cover>
     <img [src]="'/assets/images/albums/'+dasherize(data.image)+'.jpg'" *ngIf="data">
   </div>
 
